--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <link rel="shortcut icon" href="resources/logos/mini.png" />
     <title>Proyecto</title>
     <link rel='stylesheet' href='styles.css'>
+
 <header>
     <div class="slogan">Todo lo que tu artista interior necesita</div>
 <div class="inicio">
@@ -18,11 +19,7 @@
 
 </ul>
 </div>
-<div class="iconos">
-<img src="resources/iconos/buscar.png" class="buscar-icono" alt="Buscar"/>
-<!--<img src="resources/iconos/car.svg" class="carrito-icono" alt="carrito"/>!-->
 
-</div>
 
 </div>
 
@@ -51,6 +48,14 @@
 </div>
 </div>
 </section>
+
+<section class="prom">
+    <div class="textodiv">
+<p class="promtext"> <marquee>Aqui tenemos algunos artistas que prefieren usar nuestros productos</marquee></p>
+</div>
+<div class="vidiosxd"><iframe  src="https://www.youtube.com/embed/xIlbjVxJT64" title="Que lindo oírlos cantar con nosotros ✨" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><iframe  src="https://www.youtube.com/embed/wfy2FDtWGjw?si=r8h8Lw0Wj0MRjTQP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><iframe  src="https://www.youtube.com/embed/l_bePxpAOYY?si=Di3gimJDBjtMuSOL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+</section>
+
 <section class="wp">
     <button id="whatsapp-button"><img src="resources/logos/wp-icon.png" alt="WhatsApp"></button>
 </section>
@@ -64,10 +69,15 @@
 </div>
 
 </footer>
+<section id='container'>
+   
+    <h2 class='a-second-title'>Pongame 5.0 profe :p</h2>
+    <canvas></canvas>
+  </section>
 
 <script src="productos.js"></script>
 <script src="script.js"></script>
-
+<script src="xd.js"></script>
 </body>
 
 </html>
