--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </div>
 <div class="menu-inicio">
 <ul class="lista-inicio">
-<li class="opciones-lista-inicio">  <a href="registro.html" id="registroLink" class="aa">Registro</a></li>
+<li class="opciones-lista-inicio">  <a href="instrucciones.html" id="registroLink" class="aa">Instrucciones</a></li>
 <li class="opciones-lista-inicio">  <a href="productos.html" id="ProductosLink" class="aa">Productos</a></li>
 <li class="opciones-lista-inicio">  <a href="info.html" id="infoLink" class="aa">Sobre Nosotros</a></li>
 
@@ -55,7 +55,29 @@
 </div>
 <div class="vidiosxd"><iframe  src="https://www.youtube.com/embed/xIlbjVxJT64" title="Que lindo oírlos cantar con nosotros ✨" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><iframe  src="https://www.youtube.com/embed/wfy2FDtWGjw?si=r8h8Lw0Wj0MRjTQP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><iframe  src="https://www.youtube.com/embed/l_bePxpAOYY?si=Di3gimJDBjtMuSOL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
 </section>
+<section class="productos-Index">
+    <h1>Nuestros Productos más Vendidos</h1>
 
+    <div class="productos-index-container1">
+     <div class="texto-productos-index">
+        <h1>Yamaha Pacifica</h1>
+        <p>Esta guitarra es muy versatil, con ella puedes tocar una gran variedad de generos distintos con un sonido muy equilibrado, la mejor guitarra electrica para principiantes.
+</div>
+<div class="images-productos-index">
+    <img src="resources/images/productos/Instrumentos/Yamaha11.jpg" alt="Guitarra Yamaha Pacifica (color madera)">
+</div>
+
+    </div>
+    <div class="productos-index-container2">
+    <div class="images-productos-index">
+        <img src="resources/images/productos/Instrumentos/bateria11.jpg" alt="Guitarra Yamaha Pacifica (color madera)">
+    </div>
+    <div class="texto-productos-index">
+        <h1>Bateria Pearl</h1>
+        <p>Bateria Pearl de 5 piezas, Bombo 20×16, redoblante 14×5, Tom 1 10×7, Tom 2 12×8, y Tom de Piso 14×14, acompañada de base de platillos, base para Hi-Hat, base de redoblante, pedal, silla para el baterista, 2 bases para los Tom x 2 Crash-Ride de 16 ” y Hi-Hats de 14″, bolsa para las baquetas, todas las bases de la serie ROADSHOW tienen doble refuerzo, altura y ángulo ajustable, y cuentan con patas dobles para resistir los golpes de alto impacto.
+    </div>
+</div>
+</section>
 <section class="wp">
     <button id="whatsapp-button"><img src="resources/logos/wp-icon.png" alt="WhatsApp"></button>
 </section>
