--- a/maq.html
+++ b/maq.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="maqueta">INDEX</h1>
     <img src="Maquetacion/index.png" alt="">
-    <h1 class="maq">Registro</h1>
+    <h1 class="maq">BUSCAR</h1>
     <img src="Maquetacion/registro.png" alt="">
     <h1 class="maq">Sobre Nosotros</h1>
     <img src="Maquetacion/info.png" alt="">
